--- a/catalog/templates/catalog/base.html
+++ b/catalog/templates/catalog/base.html
@@ -21,29 +21,8 @@
     <p class="lead">Skystore - это отличный вариант хранения ваших плагинов и примеров кода, который вы бы хотели
         продать</p>
 </div>
-
-<div class="container">
-    <div class="row text-center">
-        <div class="col-3">
-            {% for object in object_list %}
-            <div class="card mb-4 box-shadow">
-                <div class="card-header">
-                    <h4 class="my-0 font-weight-normal">{{ object.name }}</h4>
-                </div>
-                <div class="card-body">
-                    <h1 class="card-title pricing-card-title"> Цена: {{ object.price }}</h1>
-                    <ul class="list-unstyled mt-3 mb-4 text-start m-3">
-                        <li> Категория: {{ object.category }}</li>
-                        <li> Описание: {{ object.description|slice:100 }}</li>
-
-                    </ul>
-                    <button type="button" class="btn btn-lg btn-block btn-outline-primary">Купить</button>
-                </div>
-            </div>
-            {% endfor %}
-        </div>
-    </div>
-
+{% block content %}
+{% endblock %}
     <footer class="pt-4 my-md-5 pt-md-5 border-top">
         <div class="row">
             <div class="col-12 col-md">
