--- a/catalog/templates/catalog/base.html
+++ b/catalog/templates/catalog/base.html
@@ -8,19 +8,14 @@
      <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" >
 </head>
 <body>
-<div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
-    <h5 class="my-0 mr-md-auto font-weight-normal">Мир животных</h5>
-    <nav class="ms-5">
-        <a class="p-2 btn btn-outline-primary" href="/">Каталог</a>
-        <a class="p-2 btn btn-outline-primary" href="/contacts/">Контакты</a>
-        <a class="p-2 btn btn-outline-primary" href="/admin/">Админ-панель</a>
-    </nav>
-</div>
+
+    {% include 'catalog/includes/inc_catalog_menu.html' %}
 
 <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
     <h1 class="display-4">Мир животных</h1>
     <p class="lead">Мы работает для вас и ваших питомцев!</p>
 </div>
+
 {% block content %}
 {% endblock %}
     <footer class="pt-4 my-md-5 pt-md-5 border-top">
