--- a/catalog/templates/catalog/product_list.html
+++ b/catalog/templates/catalog/product_list.html
@@ -1,4 +1,5 @@
 {% extends 'catalog/base.html' %}
+{% load my_tags %}
 {% block content %}
 <div class="container">
     <div class="row text-center">
@@ -8,6 +9,7 @@
                 <div class="card-header">
                     <h4 class="my-0 font-weight-normal">{{ object.name }}</h4>
                 </div>
+                <img src="{{object.image | media_filter}}" alt='Object Image' class='img-fluid'>
                 <div class="card-body">
                     <h1 class="card-title pricing-card-title"> Цена: {{ object.price }}</h1>
                     <ul class="list-unstyled mt-3 mb-4 text-start m-3">
