--- a/catalog/templates/catalog/product.html
+++ b/catalog/templates/catalog/product.html
@@ -13,11 +13,9 @@
                     <h1 class="card-title pricing-card-title"> Цена: {{ object.price }}</h1>
                     <ul class="list-unstyled mt-3 mb-4 text-start m-3">
                         <li> Категория: {{ object.category }}</li>
-
-                    </ul>
-                    <button type="button" class="btn btn-lg btn-block btn-outline-primary">Купить</button>
-                </div>
+                        <li> Категория: {{ object.description|slice:100 }}</li></ul>
             </div>
+            <a class="p-2 btn btn-outline-primary" href='#'>Купить</a></div>
         </div>
     </div>
 {% endblock %}
