--- a/catalog/templates/catalog/product_list.html
+++ b/catalog/templates/catalog/product_list.html
@@ -14,11 +14,9 @@
                     <h1 class="card-title pricing-card-title"> Цена: {{ object.price }}</h1>
                     <ul class="list-unstyled mt-3 mb-4 text-start m-3">
                         <li> Категория: {{ object.category }}</li>
-                        <li> Описание: {{ object.description|slice:100 }}</li>
-
-                    </ul>
-                    <button type="button" class="btn btn-lg btn-block btn-outline-primary">Купить</button>
+                        <li> Описание: {{ object.description|slice:100 }}</li></ul>
                 </div>
+                 <a class="p-2 btn btn-outline-primary" href='{% url "catalog:product_details" object.pk %}'>О товаре
             </div>
             {% endfor %}
         </div>
