--- a/catalog/templates/catalog/product_detail.html
+++ b/catalog/templates/catalog/product_detail.html
@@ -13,7 +13,7 @@
                     <h1 class="card-title pricing-card-title"> Цена: {{ object.price }}</h1>
                     <ul class="list-unstyled mt-3 mb-4 text-start m-3">
                         <li> Категория: {{ object.category }}</li>
-                        <li> Категория: {{ object.description|slice:100 }}</li></ul>
+                        <li> Описание: {{ object.description|slice:100 }}</li></ul>
             </div>
             <a class="p-2 btn btn-outline-primary" href='#'>Купить</a></div>
         </div>
