--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -8,7 +8,7 @@
                 <div class="card-header">
                     <h4 class="my-0 font-weight-normal">{{ object.title }}</h4>
                 </div>
-                <img src="{{ object.preview | media_filter1 }}">
+                <img src="{{object.preview|media_filter1}}" alt='Object Image' class='img-fluid'>
                 <div class="card-body">
                     <h1 class="card-title pricing-card-title"> Слаг: {{ object.slug }}</h1>
                     <ul class="list-unstyled mt-3 mb-4 text-start m-3">
