--- a/blog/templates/blog/post_confirm_delete.html
+++ b/blog/templates/blog/post_confirm_delete.html
@@ -6,14 +6,12 @@
             <div class="card">
                 <form method="post" enctype="multipart/form-data">
                  {% csrf_token %}
-                  {{ form.as_p}}
+                 <p>Точно вы хотите удалить {{object.title}} ?</p>
                   <button type="submit" class="btn btn-primary">
-                    {% if object %}
-                      Сохранить
-                      {% else %}
-                      Создать
-                      {% endif %}
+                  Подтвердить
                   </button>
+                  <a class="btn btn-success" href="{% url 'blog:post_list' %}" role='button'>
+                  Отменить </a>
                 </form>
             </div>
         </div>
