--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -14,5 +14,6 @@
                     <ul class="list-unstyled mt-3 mb-4 text-start m-3">
                         <li> Создано: {{ object.created_at }}</li>
                         <li> Текст: {{ object.body|slice:300 }}</li></ul>
+                    <p class = 'card-text'> Просмотров: {{object.view_count}} </p>
             </div></div>
 {% endblock %}
