--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -6,11 +6,10 @@
         <div class="col-4">
             <div class="card mb-4 box-shadow">
                 <div class="card-header">
-                    <h4 class="my-0 font-weight-normal">{{ object.title }}</h4>
+                    <h4 class="my-0 font-weight-normal">{{ object.title }}({{object.slug }})</h4>
                 </div>
                 <img src="{{object.preview|media_filter1}}" alt='Object Image' class='img-fluid'>
                 <div class="card-body">
-                    <h1 class="card-title pricing-card-title"> Слаг: {{ object.slug }}</h1>
                     <ul class="list-unstyled mt-3 mb-4 text-start m-3">
                         <li> Создано: {{ object.created_at }}</li>
                         <li> Текст: {{ object.body|slice:300 }}</li></ul>
