--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -9,19 +9,25 @@
                     <h4 class="my-0 font-weight-normal">{{ object.title }}</h4>
                 </div>
                 <div class="card-body">
-                    <h1 class="card-title pricing-card-title"> Слаг: {{ object.slug }}</h1>
-                    <ul class="list-unstyled mt-3 mb-4 text-start m-3">
+                   <ul class="list-unstyled mt-3 mb-4 text-start m-3">
                         <li> Дата создания: {{ object.created_at }}</li>
                         <li> Текст: {{ object.body|slice:300 }}</li></ul>
                 </div>
                 <a class="p-2 btn btn-outline-primary" href='{% url "blog:details" object.pk %}'>Посмотреть </a>
                 <a class="p-2 btn btn-outline-primary" href='{% url "blog:update" object.pk %}'>Редактировать </a>
                 <a class="p-2 btn btn-outline-primary" href='{% url "blog:delete" object.pk %}'>Удалить </a>
-            </div>
-            {% endfor %}
-             <a class="p-2 btn btn-outline-primary" href='{% url "blog:create" %}'>Создать пост </a>
-        </div>
 
+                        {% if object.published %}
+            <a class="p-2 btn btn-outline-danger" href='{% url "blog:activity" object.pk %}'>Опубликовано </a>
+            {% else %}
+            <a class="p-2 btn btn-outline-success" href='{% url "blog:activity" object.pk %}'>Не опубликовано </a>
+            {% endif %}
+            {% endfor %}
+
+        </div>
+<div>
+             <a class="p-2 btn btn-outline-primary" href='{% url "blog:create" %}'>Создать пост </a></div>
+         </div>
    </div>
 </div>
 {% endblock %}
