--- a/catalog/templates/catalog/product_list.html
+++ b/catalog/templates/catalog/product_list.html
@@ -17,8 +17,11 @@
                         <li> Описание: {{ object.description|slice:100 }}</li></ul>
                 </div>
                  <a class="p-2 btn btn-outline-primary" href='{% url "catalog:product_details" object.pk %}'>О товаре
+                 <a class="p-2 btn btn-outline-primary" href='{% url "catalog:update_product" object.pk %}'>Редактировать
             </div>
             {% endfor %}
+            <a class ="p-2 btn btn-outline-primary" href='{% url "catalog:create_product" %}'>Добавить продукт</a>
         </div>
+
     </div>
 {% endblock %}
