--- a/catalog/templates/catalog/product_form.html
+++ b/catalog/templates/catalog/product_form.html
@@ -1,24 +1,53 @@
 {% extends 'catalog/base.html' %}
 {% block content %}
+
 <div class="container">
-    <div class="row">
-        <div class="col-6">
-            <div class="card">
-                <div class="card-header">
-                    <h3 Добавление продукта></h3>
-                <div class="card-body">
-                    <form method="post" enctype="multipart/form-data">
-                      {% csrf_token %}
-                      {{ form.as_p}}
-                     <button type="submit" class="btn btn-primary">
-                         {% if object %}
-                          Сохранить
+    <div class="col-12">
+        <form class="row" method="post" enctype="multipart/form-data">
+            <div class="col-6">
+                <div class="card">
+                    <div class="card-header">
+                          {% if object %}
+                          Редактировать продукта
                           {% else %}
-                          Создать
+                          Добавить продукт
                           {% endif %}
-                     </button>
-                    </form>
+                     </div>
+                    <div class="card-body">
+                        {% csrf_token %}
+                        {{ form.as_p}}
+                        <button type="submit" class="btn btn-primary">
+                            {% if object %}
+                            Сохранить
+                            {% else %}
+                            Создать
+                            {% endif %}
+                        </button>
+                    </div>
+                    <div class="card-footer">
+                    </div>
+                </div>
             </div>
-        </div>
+            <div class="col-6">
+                <div class="card">
+                    <div class="card-header">
+                        <h5 class="card-title">
+                        Версии продукта
+                    </h5>
+
+                    </div>
+                    <div class="card-body">
+                        {{ formset.management_form}}
+                        {% for form in formset.forms %}
+                        {{ form.as_p}}
+                        {% endfor %}
+                    </div>
+                </div>
+                <div class="card-footer">
+
+                </div>
+            </div>
+        </form>
     </div>
+</div>
 {% endblock %}
