--- a/catalog/templates/catalog/product_detail.html
+++ b/catalog/templates/catalog/product_detail.html
@@ -14,6 +14,7 @@
                     <ul class="list-unstyled mt-3 mb-4 text-start m-3">
                         <li> Категория: {{ object.category }}</li>
                         <li> Описание: {{ object.description|slice:100 }}</li></ul>
+                        <li> Актуальная вервия: {{ actual_version.version_title|default:"Не указана" }}</li></ul>
             </div>
             <a class="p-2 btn btn-outline-primary" href='#'>Купить</a></div>
         </div>
